Fix all Java 21 compiler warnings and remove stale task markers
Modernize raw types, deprecated APIs (URL, newInstance, boxing constructors), dead code, unused imports/variables, and replace 37 TODO/FIXME/REVISIT markers with descriptive comments or remove them where no longer relevant.